# caden-solana

./: Anchor.toml  README.md  close-all-accounts.js  find-right-pda.js  fix-market.js  init-all-accounts.js  mint-nft-direct.js  package-lock.json  package.json  reinit-market.js  setup-all-accounts.js  test-complete-caden.js  tsconfig.json
app3/: .gitignore  DEMO_GUIDE.md  QUICK_START.md  README.md  STATUS.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  polyfills.js  setup.sh  tsconfig.json
app3/android/: settings.gradle
app3/app/: _layout.tsx  sign-in.tsx
app3/components/: ActivePositions.tsx  BettingInterface.tsx  MarketCard.tsx  PortfolioOverview.tsx  PositionCard.tsx  RecentActivity.tsx  SettlementSlotInterface.tsx  (+4 more)
programs/seam/: Cargo.toml
programs/seam/src/: lib.rs
scripts/: callInitMarket.js  checkRealData.js  createMarketDirect.js  createUSDC.js  deploy-2025.sh  deploy-alternative.sh  deploy-real.js  deploy-workaround.js  deploy.sh  efficientHeatmapCrank.js  fixRealIntegration.js  full-test.ts  heatmapCrank.js  initAllPDAs.js  initCadenPDAs.js  initGovernance.js  initHeatmapPDA.js  initMarket.js  initMarketDirect.js  initMarketNow.js  initMarketWorking.js  initialize.ts  initializeAllPDAs.js  liquidatorBot.js  makeEverythingReal.js  makeReal.js  makeRealSimple.js  mockOracle.js  mockOracle.ts  quickInitPDAs.js  realDataUpdater.js  realHeatmapCrank.js  realIntegration.js  realMockOracle.js  simpleHeatmapCrank.js  simpleInit.js  simpleInitPDAs.js  simpleRealHeatmap.js  test-governance.ts  testProgram.js  (+2 more)
tests/: seam.js
(+29 files in other folders)
